--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 asgiref==3.2.10
-Django==3.1.2
+Django==2.1.7
 django-crontab==0.7.1
 django-debug-toolbar==3.1.1
-PyMySQL==0.10.1
+pymysql==0.9.3
 pytz==2020.1
 sqlparse==0.4.1
